# CarLudGine_

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Setting_game.json  text.yml
include/CarLudGine/: Config  Config.hpp  ControlKeyboard.hpp  ControlKeyboardAndMaus  IWindow  IWindow.hpp  Parser.hpp  ParserIniFiles.hpp  ParserJsonFiles.hpp  ParserYamlFiles.hpp  SoundControl.hpp  SoungControl.hpp  StyleWindow.hpp  Window  Window.hpp
include/CarLudGine/Errors/: CError.hpp
src/: main.cpp
src/Errors/: CError.cpp
src/Module/: Config.cpp
src/Module/CursesCpp/: Config.cpp  ControlKeyboard.cpp  ControlKeyboardAndMaus.cpp  StyleWindow.cpp  Window.cpp
src/Module/ParserFiles/: Parser.cpp  ParserIniFiles.cpp  ParserJsonFiles.cpp  ParserYamlFiles.cpp
src/Module/SoundControll/: SoundControl.cpp  SoungControl.cpp
tests/: CMakeLists.txt  test.cpp
